--- a/index.css
+++ b/index.css
@@ -1,3 +1,44 @@
-#heading{
-    color:red;
+.header{
+    display: flex;
+    justify-content: space-between;
+    border:1px solid black;
+}
+
+.logo-container{
+  width:200px;
+   
+}
+
+.nav-items > ul{
+display: flex;
+list-style:none;
+font-size: 20px;
+}
+
+.nav-items > ul > li{
+    padding:10px;
+    margin:10px;
+}
+
+.res-container{
+display: flex;
+flex-wrap: wrap;
+}
+.res-card{
+    width:200px;
+    padding:10px;
+    margin:15px;
+}
+
+.res-card:hover{
+    cursor:pointer;
+    border:1px solid black;
+}
+.search{
+    padding:9px;
+}
+
+.res-logo{
+    width:100%;
+  
 }
